plugins {
    id 'java'
    id 'jacoco'
    id 'checkstyle'
}

group = 'ru.nsu.ermakov'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.9.1')
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.mockito:mockito-core:5.4.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.4.0'
}

test {
    useJUnitPlatform()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
}
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview', '--release', '21']
}

tasks.withType(Test).configureEach {
    jvmArgs += ['--enable-preview']
    doFirst {
        jvmArgs = ['--enable-preview']
    }
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += ['--enable-preview']
}

tasks.withType(Javadoc).configureEach {
    options.encoding = 'UTF-8'
    options.addStringOption('-release', '21')
}

checkstyle {
    toolVersion = '10.12.4'
    configFile = file("${rootDir}/google_checks.xml")
    maxWarnings = 0
    maxErrors = 0
}

checkstyleMain {
    source = sourceSets.main.allSource
}

checkstyleTest {
    source = sourceSets.test.allSource
}